fixed footer being hidden by projects

--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -10,6 +10,7 @@
 	background-color: black;
 	height: 4.4rem;
 	text-align: center;
+	z-index: 100;
 	a {
 		padding: .5rem 1rem;
 	}
